--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ PORT = 5000
 CLIENT_URL = "http://localhost:3000"
 
 # Database Configuration
-DB_HOST = "153.92.15.41"
-DB_USER = "u615455808_admin"
-DB_PASS = "@Angcuteko1121"
+DB_HOST = "mysql.gfiminimarts.com" #"153.92.15.41"
+DB_USER = "johnrobertrtipon" #"u615455808_admin"
+DB_PASS = "X0Ahk7rEg6C(FjUa" #"@Angcuteko1121"
 DB_NAME = "u615455808_POS"
 
 # JWT Configuration
