--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ DB_PASS = "X0Ahk7rEg6C(FjUa" #"@Angcuteko1121"
 DB_NAME = "u615455808_POS"
 
 # JWT Configuration
-JWT_SECRET="my-super-pos-api"
+JWT_SECRET="my-super-pos"
 JWT_EXPIRES_IN=1h
